--- a/css/style.css
+++ b/css/style.css
@@ -548,3 +548,85 @@ h1, h2, h3, h4{
 	box-shadow: 0px 0px 40px rgba(0,0,0, .19);
 	z-index: 1;
 }
+.popup{
+	width:560px; 
+	height:300px;
+	background: #fff;
+	position: fixed;
+	top: 0; bottom: 0;
+	left:0; right: 0;
+	margin:auto;
+	z-index: 100;
+}
+.bg_popup{
+	background: rgba(37,37,37, 0.8);
+	position: fixed;
+	top: 0; bottom: 0;
+	left:0; right: 0;
+	z-index: 99;
+}
+.popup_title{
+	font-size: 22px;
+	text-transform: uppercase;
+	text-align: center;
+	background:#b366ff;
+	padding: 13px 0;
+}
+.close{
+	width: 24px;
+	height: 24px;
+	background: url('../img/close.png');
+	position: absolute;
+	right: 20px;
+	top: 12px;
+	z-index: 1;
+	cursor: pointer;
+}
+.popup_category{
+	font-size: 14px;
+	color:#b366ff;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+.popup_content{
+	height: 244px;
+	margin-top: 50px;
+}
+.popup_img{
+	width: 150px;
+	position: absolute;
+	left:0; top:0; bottom: 0;
+	margin-top: 58px;
+}
+.popup_img img{
+	position: absolute;
+	left:0; right:0;
+	top:0; bottom: 0;
+	margin: auto;
+}
+.popup_text{
+	padding-top: 54px;
+	padding-bottom: 24px;
+	overflow: hidden;
+	-webkit-transition: .4s;
+	transition: .4s;
+	padding-left: 280px;
+}
+.popup_goods_title{
+	font-size: 16px;
+	line-height: 22px;
+	margin-top:4px;
+	-webkit-transition:.4s;
+	transition: .4s
+}
+.popup .price{
+	font-size: 16px;
+	color:#6f6f6f;
+	text-transform: uppercase;
+	margin-top: 23px;
+	-webkit-transition:.4s;
+	transition: .4s
+}
+.popup .price span{
+	color:#b366ff;
+}
